@@ -10,6 +10,7 @@ trunk
 * added omxLocateParameters() function (see ?omxLocateParameters)
 * type='RAM' allowing 'manifestVars' argument to appear in a different order
   than in the observed covariance matrix.
+* bug fix in the identification of NA definition variables
 
 Release 1.2.0-1926 (February 04, 2012)
 ======================================
